style.css: .metadata should use fixed-width font to be aligned

--- a/themes/github/style.css
+++ b/themes/github/style.css
@@ -1,7 +1,8 @@
 /* index */
 
 .metadata {
-    color: rgba(0, 0, 0, .54)
+    color: rgba(0, 0, 0, .54);
+    font-family: sans-serif;
 }
 
 .index {
